# omnissiah

./: .gitignore  Dockerfile.ollama  README.md  docker-compose.yml  pyproject.toml
