[project]
name = "omnissiah"
version = "0.1.0"
description = ""
authors = [
    {name = "IJMadalenA"}
]
readme = "README.md"

requires-python = ">=3.12,<3.13"

dependencies = [
    "poetry (>=2.0.1,<3.0.0)",
    "packaging (>=23.2,<=24.0)",
    "langfuse (>=2.58.2,<3.0.0)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"